--- a/index.html
+++ b/index.html
@@ -254,32 +254,177 @@
     <section id="projects" class="section" data-aos="fade-up">
       <h2>Projects</h2>
       <div class="project-timeline">
+        <!-- Wine Quality Prediction Project -->
         <div class="project-item">
           <h3>Wine Quality Prediction</h3>
           <p class="project-date">📅 2024</p>
           <p>
-            SVC-driven classification model to predict wine quality with data
-            preprocessing and model evaluation.
+            Developed a machine learning model to predict wine quality based on
+            chemical properties using the Kaggle dataset. Conducted EDA, built
+            classification models, and optimized performance by converting
+            multi-class to binary classification (Good vs. Bad wine).
           </p>
-          <a
-            href="https://github.com/Prem-123Prakash/Wine_Quality_Prediction"
-            target="_blank"
-            >🔗 GitHub</a
-          >
+          <ul>
+            <li>✔ Preprocessed & scaled 4898 samples with 11 features</li>
+            <li>✔ Applied Support Vector Classifier (SVC)</li>
+            <li>✔ Achieved higher accuracy with binary classification</li>
+            <li>✔ Alcohol content identified as strongest predictor</li>
+            <li>✔ EDA & visualization (plots, heatmaps, outlier detection)</li>
+          </ul>
+          <p>
+            <strong>Tech Stack:</strong> Python, Pandas, NumPy, Scikit-learn,
+            Matplotlib, Seaborn
+          </p>
+          <div class="project-links">
+            <a
+              href="https://github.com/Prem-123Prakash/Wine_Quality_Prediction"
+              target="_blank"
+              >🔗 GitHub</a
+            >
+            <!-- <a href="#" target="_blank">🌐 Live Demo</a> -->
+          </div>
         </div>
 
+        <!-- Smart Traffic Management System Project -->
         <div class="project-item">
-          <h3>Smart Traffic Management</h3>
+          <h3>Smart Traffic Management System</h3>
           <p class="project-date">📅 2024</p>
           <p>
-            AI-based vehicle detection system using YOLO & OpenCV with 95%
-            accuracy for real-time monitoring.
+            AI-powered traffic monitoring and adaptive signal control system
+            leveraging computer vision, deep learning, and data analytics for
+            smart city deployment.
           </p>
-          <a
-            href="https://github.com/Prem-123Prakash/Smart_Traffic_Management_System"
-            target="_blank"
-            >🔗 GitHub</a
-          >
+          <ul>
+            <li>
+              ✔ Engineered vehicle detection using OpenCV & YOLOv8 with 95%
+              accuracy (1,000+ vehicles in real time)
+            </li>
+            <li>
+              ✔ Adaptive traffic light control reduced peak-hour wait times by
+              25%
+            </li>
+            <li>
+              ✔ Integrated ResNet50 & TensorFlow/Keras for vehicle
+              classification
+            </li>
+            <li>
+              ✔ Data analysis & visualization with Pandas, Seaborn, and
+              Matplotlib
+            </li>
+          </ul>
+          <p>
+            <strong>Tech Stack:</strong> Python, OpenCV, YOLOv8, Haar Cascades,
+            Pandas, NumPy, TensorFlow, Keras, Scikit-learn, ResNet50,
+            Matplotlib, Seaborn
+          </p>
+          <div class="project-links">
+            <a
+              href="https://github.com/yourusername/smart-traffic-management"
+              target="_blank"
+              >🔗 GitHub</a
+            >
+            <!-- <a href="#" target="_blank">🌐 Live Demo</a> -->
+          </div>
+        </div>
+
+        <!-- Vaidya Bandhu Project -->
+        <div class="project-item">
+          <h3>Vaidya Bandhu (Healthcare Platform)</h3>
+          <p class="project-date">📅 2025</p>
+          <p>
+            A healthcare web platform providing online consultation and
+            appointment booking services between patients and doctors, focusing
+            on telemedicine, secure data handling, and smooth scheduling.
+          </p>
+
+          <h4>Role (QA & Data Analytics):</h4>
+          <ul>
+            <li>
+              ✔ Performed manual testing on modules (patient registration,
+              doctor scheduling, payment)
+            </li>
+            <li>
+              ✔ Conducted API testing for authentication, booking & payment
+              endpoints using Postman
+            </li>
+            <li>
+              ✔ Analyzed patient consultation patterns to provide insights for
+              business growth
+            </li>
+          </ul>
+
+          <h4>Key Contributions:</h4>
+          <ul>
+            <li>
+              ✔ Identified and reported critical defects in appointment
+              scheduling and payment workflow
+            </li>
+            <li>✔ Verified API responses and ensured proper error handling</li>
+            <li>
+              ✔ Generated reports on usage patterns to optimize doctor
+              availability
+            </li>
+          </ul>
+
+          <p>
+            <strong>Tools Used:</strong> Postman, Zoho, SQL, Excel, Power BI
+          </p>
+
+          <!-- <div class="project-links">
+    <a href="#" target="_blank">🔗 GitHub</a>
+    <a href="#" target="_blank">🌐 Live Demo</a>
+  </div> -->
+        </div>
+
+        <!-- Kutoot Project -->
+        <div class="project-item">
+          <h3>Kutoot (E-commerce Platform)</h3>
+          <p class="project-date">📅 2025</p>
+          <p>
+            An e-commerce solution enabling users to participate in campaigns,
+            buy coins/coupons, and redeem them for luxury rewards.
+          </p>
+
+          <h4>Role (QA & Data Analytics):</h4>
+          <ul>
+            <li>
+              ✔ Performed manual testing of campaign creation, payment gateway,
+              and reward redemption modules
+            </li>
+            <li>
+              ✔ Conducted API testing for user registration, campaign APIs, and
+              coupon redemption
+            </li>
+            <li>
+              ✔ Analyzed campaign participation & customer engagement trends
+            </li>
+          </ul>
+
+          <h4>Key Contributions:</h4>
+          <ul>
+            <li>
+              ✔ Detected UI/UX issues and backend inconsistencies during
+              checkout
+            </li>
+            <li>
+              ✔ Validated campaign status (active, upcoming, expired) via API
+              responses
+            </li>
+            <li>
+              ✔ Prepared data insights dashboard highlighting top-performing
+              campaigns
+            </li>
+          </ul>
+
+          <p>
+            <strong>Tools Used:</strong> Excel, Postman, Zoho, MySQL, Power BI,
+            Python
+          </p>
+
+          <!-- <div class="project-links">
+    <a href="#" target="_blank">🔗 GitHub</a>
+    <a href="#" target="_blank">🌐 Live Demo</a>
+  </div> -->
         </div>
       </div>
     </section>
@@ -398,7 +543,8 @@
         </div>
         <div class="chat-body">
           <p>
-            Please provide your contact details and message, and I will get back to you promptly.
+            Please provide your contact details and message, and I will get back
+            to you promptly.
           </p>
           <form id="contact-form">
             <input type="text" name="name" placeholder="Name" required />
@@ -442,7 +588,7 @@
         });
       });
     </script>
-<!-- Contact us for desktop -->
+    <!-- Contact us for desktop -->
     <script>
       const openBtn = document.getElementById("open-chat");
       const closeBtn = document.getElementById("close-chat");
@@ -477,7 +623,5 @@
         charCount.textContent = `${length} / 100`;
       });
     </script>
-
-
   </body>
 </html>
